Fixing problem with background attachment on mobiles

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -31,7 +31,7 @@ body
     content: ""
     display: block
     height: 77px
-    margin-top: -66px
+    margin-top: -77px
 nav 
     text-transform: uppercase
     transition:  background-color .6s
@@ -63,6 +63,7 @@ header
     background-image: url("../img/l.jpg")
     background-position: center
     background-size: cover
+    background-repeat: no-repeat
     background-attachment: fixed
     overflow: hidden
     position: relative
